--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser-dynamic": "9.0.5",
     "@angular/router": "9.0.5",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "chart.js": "^2.9.3",
+    "chartjs": "^0.3.24",
     "firebase": "^7.14.2",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.24.0",
