removed aws keys

--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/assets/scss/argon.scss",
-              
-              "src/assets/js/custom.js"
+              "src/assets/scss/argon.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
